# project_euler

./: README.org
pe_elisp/: pe_elisp.el
pe_fortran/: CMakeLists.txt
pe_fortran/main/: main.f90
pe_fortran/mpmodule/: CMakeLists.txt  gnu-complib1.scr  mpfuna.f90  mpfunb.f90  mpfunc.f90  mpfund.f90  mpfune.f90  mpfunf.f90  mpfung1.f90  mpfunh1.f90  mpmodule.f90
pe_fortran/probs/: CMakeLists.txt  probs.f90  probs01to10.f90  probs11to20.f90
pe_fortran/utils/: CMakeLists.txt  bigintmodule.f90  primesmodule.f90  timeitmodule.f90  utilsmodule.f90
pe_ocaml/: .gitignore  dune-project  dune-workspace
pe_ocaml/lib/: _region_.tex  dune  problem_1.ml  problem_10.ml  problem_11.ml  problem_12.ml  problem_13.ml  problem_14.ml  problem_15.ml  problem_16.ml  problem_17.ml  problem_18.ml  problem_19.ml  problem_2.ml  problem_20.ml  problem_21.ml  problem_22.ml  problem_23.ml  problem_24.ml  problem_25.ml  problem_26.ml  problem_27.ml  problem_28.ml  problem_29.ml  problem_3.ml  problem_30.ml  problem_31.ml  problem_32.ml  problem_33.ml  problem_34.ml  problem_35.ml  problem_36.ml  problem_37.ml  problem_38.ml  problem_39.ml  problem_4.ml  problem_40.ml  problem_41.ml  problem_42.ml  problem_43.ml  (+56 more)
pe_python/: .gitignore  main.py  problems_past_100.py  problems_sub_100.py  utils.py
pe_q/: pe.q
